--- a/src/views/tasks/create.hbs
+++ b/src/views/tasks/create.hbs
@@ -1,27 +1,28 @@
 <div
-  class="block mx-auto my-12 p-8 bg-white w-1/3 border border-gray-200 rounded-lg shadow-lg text-gray-800"
+  class="block mx-auto my-12 p-8 bg-white w-full sm:w-1/2 md:w-1/3 border border-gray-200 rounded-lg shadow-lg text-gray-800"
 >
-  <h1 class="text-center text-3x1 font-bold">create task</h1>
+  <h1 class="text-center text-3xl font-bold">Crear Tarea</h1>
 
   <form class="mt-4" action="" method="post">
     <input
-      class="border border-gray-200 rounded-md bg-gray-200 w-full text-lg placeholder-gray-500 p-2 my-2 focus-bg-white h-10"
+      class="border border-gray-200 rounded-md bg-gray-200 w-full text-lg placeholder-gray-500 p-2 my-2 focus:bg-white h-10"
       type="text"
-      placeholder="task title"
+      placeholder="Titulo"
       name="title"
     />
 
     <textarea
-      class="border border-gray-200 rounded-md bg-gray-200 w-full text-lg placeholder-gray-500 p-2 my-2 focus-bg-white h-40"
+      class="border border-gray-200 rounded-md bg-gray-200 w-full text-lg placeholder-gray-500 p-2 my-2 focus:bg-white h-40"
       id=""
       cols="30"
       rows="10"
-      placeholder="task description"
+      placeholder="Descripcion"
       name="description"
     ></textarea>
+
     <button
       type="submit"
-      class="rouded-md bg-green-500 w-full text-lg text-white font-semibold p-2 my-3 hover:bg-600 focus:bg-green-700"
-    > send</button>
+      class="rounded-md bg-green-500 w-full text-lg text-white font-semibold p-2 my-3 hover:bg-green-600 focus:bg-green-700"
+    > Enviar</button>
   </form>
 </div>
