--- a/src/views/tasks/edit.hbs
+++ b/src/views/tasks/edit.hbs
@@ -1,7 +1,5 @@
-<div
-  class="block mx-auto my-12 p-8 bg-white w-1/3 border border-gray-200 rounded-lg shadow-lg text-gray-800"
->
-  <h1 class="text-center text-3x1 font-bold">edit task</h1>
+<div class="block mx-auto my-12 p-8 bg-white w-1/3 border border-gray-200 rounded-lg shadow-lg text-gray-800">
+  <h1 class="text-center text-3x1 font-bold">Modificar</h1>
 
   {{#each tasks}}
 
@@ -25,7 +23,7 @@
       <button
         type="submit"
         class="rouded-md bg-green-500 w-full text-lg text-white font-semibold p-2 my-3 hover:bg-600 focus:bg-green-700"
-      > send</button>
+      > Enviar</button>
     </form>
 
   {{/each}}
